# history_dag

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md
include/: collection.hpp  compact_genome.hpp  flat_collection.hpp  history_dag.hpp  history_dag_common.hpp  history_dag_edge.hpp  history_dag_edge_storage.hpp  history_dag_loader.hpp  history_dag_node.hpp  history_dag_node_storage.hpp  leaf_set.hpp  merge.hpp  merge_dags.hpp  merge_functional.hpp  mutation.hpp  newick.hpp  post_order_iterator.hpp  pre_order_iterator.hpp  traverse_value.hpp
include/inl/: compact_genome_inl.hpp  history_dag_edge_inl.hpp  history_dag_inl.hpp  history_dag_node_inl.hpp  leaf_set_inl.hpp  merge_functional_inl.hpp  merge_inl.hpp  mutation_inl.hpp  post_order_iterator_inl.hpp  pre_order_iterator_inl.hpp  traverse_value_inl.hpp
src/: history_dag.cpp  history_dag_edge.cpp  history_dag_loader.cpp  history_dag_node.cpp  history_dag_node_storage.cpp  merge.cpp  merge_dags.cpp  post_order_iterator.cpp  pre_order_iterator.cpp
test/: hdag_ops.cpp  hdag_ops.hpp  main.cpp  test_compact_genome.cpp  test_dag_traversal.cpp  test_flat_collection.cpp  test_loader.cpp  test_merge.cpp  test_merge_functional.cpp
